--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -19,15 +19,57 @@
     overflow: hidden;
     background-color: slategrey;
     padding: 10px;
-    margin: 20px 0px;
+    /* margin: 20px 0px; */
   }
   
+  /* The animation code */
+@keyframes easeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+
+  @keyframes easeOut {
+    from {opacity: 1;}
+    to {opacity: 0;display: none;}
+  }
+
+  @keyframes viz {
+    from {opacity: 1;}
+    to {display: none;visibility: hidden;}
+  }
+
   .active {
+    animation-name: easeIn;
+    animation-duration: 2s;
+
     display: inline-block;
+    visibility: visible;
+    
+    /* transition-timing-function: ease-in;
+    transition: 0.5s;
+    -webkit-transition-timing-function: ease-in-out; */
+    /* -webkit-transition-duration: 1s; */
+
+    /* opacity: 1; */
+    /* transition: opacity 1s linear; */
+    /* -moz-transition: opacity 2s linear;  */
+    /* Firefox 4 */
+    /* -webkit-transition: opacity 1s linear;  */
+    /* Safari and Chrome */
+    /* -o-transition: opacity 2s linear;  */
+    /* Opera */
+    /* -ms-transition: opacity 2s linear;  */
+    /* Explorer 10 */
   }
   
   .inactive {
+    animation-name: easeOut;
+    animation-duration: 3s;
+    /* animation: viz 2s; */
     display: none;
+    visibility: hidden;
+    
+    
   }
   
   .slides {
@@ -46,7 +88,9 @@
     object-fit: contain;
     box-shadow: 0px 0px 20px black;
     margin: 10px 0px;
-  }
+    transition: all 0.5s ease-in;
+    border-radius: 10px;
+}
   
   .slide-title,
   .slide-text {
@@ -81,7 +125,7 @@
   }
 
   .prev {
-      left: 10px;
+      left: 0;
   }
   
   .next {
@@ -149,7 +193,9 @@
     .slider-container {
         /* min-height: 650px; */
         height: var(--heights);
-        width: var(--widths);
+        /* width: var(--widths); */
+        width: 100vw;
+        height: 85vh;
         /* height: fit-content;
         width: var(--widths); */
         position: relative;
@@ -157,6 +203,13 @@
         overflow: hidden;
         background-color: slategrey;
         padding: 10px;
-        margin: 20px 0px;
+        margin: 0px auto;
+      }
+
+      .slide-image{
+          /* width: 98%; */
+          height: 85%;
+        /* min-height: 200px; */
+        /* min-width: 300px; */
       }
   }
