--- a/src/components/Albums/Album.css
+++ b/src/components/Albums/Album.css
@@ -59,21 +59,31 @@
     /* background-color: whitesmoke; */
     /* background-color: floralwhite; */
     background-color: #ecdfcf; /* from beach theme website: https://colorpalettes.net/color-palette-226/ */
-    
+    padding: 20px 0;
 }
 
 .album-image-outer {
     min-width: 250px;
     width: 25%;
+    height: 500px;
     box-shadow: 0px 0px 5px black;
     border-radius: 10px;
     margin: 10px auto;
+    display: block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .album-image{
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    display: block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    /* background-image: url(); */
 }
 
 .album-download-outer{
