--- a/src/components/FirstPhoto/FirstPhoto.css
+++ b/src/components/FirstPhoto/FirstPhoto.css
@@ -1,11 +1,12 @@
 .first-outer{
     width: 100%;
-    height: 400px;
-    /* height: 30vh; */
+    height: 75vh;
+    /* height: 400px; */
     display: flex;
     justify-content: center;
     align-items: center;
     object-fit: cover;
+    background-color: #bff5f5;
 }
 
 .first-wrapper{
@@ -21,8 +22,9 @@
 
 .first-wrapper > img {
     width: 100%;
-    max-width: 180px;
-    height: 80%;
+    height: 90%;
+    /* max-width: 180px; */
+    /* height: 80%; */
     border-radius: 50%;
     display: flex;
     justify-content: center;
