--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -33,7 +33,8 @@
     /* height: 200px; */
     /* box-shadow: 0px 0px 5px black; */
     border-radius: 10px;
-    margin: 10px auto;
+    /* margin: 10px auto; */
+    margin: 10px;
 }
 
 .gallery-image{
