--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -3,7 +3,8 @@
     max-width: 95vw;
     max-width: 95vh;
     width: 50vw;
-    height: 98%;
+    height: 100%;
+    /* height: 98%; */
 }
 
 .carousel .slide {
