--- a/src/components/FirstPhoto/FirstPhoto.css
+++ b/src/components/FirstPhoto/FirstPhoto.css
@@ -6,7 +6,9 @@
     justify-content: center;
     align-items: center;
     object-fit: cover;
-    background-color: #bff5f5;
+    /* background-color: #bff5f5; */
+    background-image: url("./texture_bg.jpg");
+    background-size: contain;
 }
 
 .first-wrapper{
@@ -21,7 +23,7 @@
 }
 
 .first-wrapper > img {
-    width: 100%;
+    /* width: 100%; */
     height: 90%;
     /* max-width: 180px; */
     /* height: 80%; */
