--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -29,12 +29,12 @@
 
 .gallery-image-outer {
     min-width: 250px;
-    width: 25%;
+    width: 25.5%;
     /* height: 200px; */
     /* box-shadow: 0px 0px 5px black; */
     border-radius: 10px;
-    /* margin: 10px auto; */
-    margin: 10px;
+    margin: 10px auto;
+    /* margin: 10px; */
 }
 
 .gallery-image{
