--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  /* background-color: lightgrey; */
+  background-image: linear-gradient(transparent,transparent, lightgrey)
 }
 
 .App-logo {
@@ -7,12 +9,32 @@
   pointer-events: none;
 }
 
-.line{
+body{
+  font-family: "Brush Script MT",cursive;
+}
+
+.line {
   width: 95vw;
   height: 5px;
   border-radius: 5px;
   background-color: grey;
   margin: 20px auto;
+  position: relative;
+  top: -7.5px;
+  border-style: groove;
+
+  width: 95vw;
+  height: 6px;
+  border-radius: 5px;
+  /* background-color: grey; */
+  margin: 20px auto;
+  position: relative;
+  top: -7.5px;
+  /* border-style: dotted; */
+  width: 90%;
+  height: 5px;
+  border-top: 7px outset lightgrey;
+  line-height: 80%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -50,21 +72,23 @@ a {
 }
 
 /* FOR NEW CAROUSEL */
-.demo-outer{
+.demo-outer {
   max-width: 100vw;
-    /* height: 90vh; */
-    height: 95vh;
-    /* overflow: hidden; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background: lightblue; */
+  /* height: 90vh; */
+  height: 95vh;
+  /* overflow: hidden; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -15px;
+  position: relative;
+  /* background: lightblue; */
 
-    /* background-color: slategrey;
+  /* background-color: slategrey;
     background-image: url('./components/FirstPhoto/texture_bg.jpg');
     background-size: contain; */
 
-    /* padding: 2vh 0; */
+  /* padding: 2vh 0; */
 }
 
 /* FOR IMAGE HEIGHT IN SLIDER */
@@ -87,31 +111,31 @@ a {
 }
 .demo-outer .carousel .slide div {
   max-height: 98vh;
-  width: auto; 
+  width: auto;
   max-width: 100vw;
 }
 
-.slide.previous >div >img {
+.slide.previous > div > img {
   display: none;
   /* border: 1px solid red; */
 }
-.slide.previous.selected >div >img {
+.slide.previous.selected > div > img {
   display: inline;
   /* border: 1px solid red; */
 }
 /* .slide.selected {
   display: inline;
 } */
-.carousel-outer{
+.carousel-outer {
   position: relative;
-    max-width: 92vw;
-    /* width: 100%;
+  max-width: 92vw;
+  /* width: 100%;
     height: 90vh; */
-    margin: auto auto;
-    /* top: 5%; */
-      position: relative;
-      max-width: 90vw;
-      max-height: 90vh;
+  margin: auto auto;
+  /* top: 5%; */
+  position: relative;
+  max-width: 90vw;
+  max-height: 90vh;
 }
 .carousel-outer {
   position: relative;
@@ -120,39 +144,39 @@ a {
   width: 100%;
   height: 100%;
 }
-.carousel-outer.landscape{
-    top: 25%;
+.carousel-outer.landscape {
+  top: 25%;
 }
-.carousel-root{
+.carousel-root {
   outline: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background: grey; */
-    /* background-color: slategrey; */
-    background-image: linear-gradient(#cbdce1, #9cb6bd, #bcd2d6, #b1c9cd);
-    margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: grey; */
+  /* background-color: slategrey; */
+  background-image: linear-gradient(#cbdce1, #9cb6bd, #bcd2d6, #b1c9cd);
+  margin: auto;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .carousel .slider {
   height: 100%;
 }
 
-.carousel.carousel-slider{
+.carousel.carousel-slider {
   /* maybe for portrati */
   /* width: 25%; */
   /* maybe for landscape */
   /* width: 100%; */
   /* max-width: 98%; */
   max-width: 100%;
-    /* max-height: 90%; */
-    max-height: 100%;
-    height: 100%;
+  /* max-height: 90%; */
+  max-height: 100%;
+  height: 100%;
 }
 /* .carousel.carousel-slider.portrait{
   width: 25%;
@@ -160,3 +184,29 @@ a {
 .carousel.carousel-slider.landscape{
   width: 100%;
 } */
+
+@media(max-width: 1000px){
+  .line {
+    width: 95vw;
+    height: 5px;
+    border-radius: 5px;
+    background-color: grey;
+    margin: 20px auto;
+    position: relative;
+    top: -7.5px;
+    border-style: groove;
+  
+    width: 95vw;
+    height: 6px;
+    border-radius: 5px;
+    /* background-color: grey; */
+    margin: 20px auto;
+    position: relative;
+    top: -7.5px;
+    /* border-style: dotted; */
+    width: 90%;
+    height: 5px;
+    border-top: 7px outset lightgrey;
+    line-height: 100%;
+  }
+}
