--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -29,6 +29,19 @@
     height: 100% !important;
 }
 
+.carousel .carousel-status{
+  bottom: 0 !important;
+}
+
+.carousel .carousel-status {
+  bottom: 0;
+  left: 0;
+  right: 30px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
  /* The animation code */
  @keyframes easeIn {
     from {opacity: 0;}
