--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,108 +1,122 @@
-.header-outer{
-    display: inline-flex;
-    min-height: 75px;
-    max-height: 21vh;
-    line-height: 11vh;
-    width: 100%;
-    text-align: center;
-    background-color: lightgrey;
-    font-family: Snell Roundhand, cursive;
-    font-size: 30px;
-    /* box-shadow: 0px 5px 5px grey; */
-    box-shadow: 0px 5px 5px lightgrey;
-    /* font-size: 20vh; */
-    /* color: silver; */
-    color: #858585;
-    /* -webkit-text-stroke-width: 0.5px;
+.header-outer {
+  display: inline-flex;
+  /* min-height: 75px;
+  max-height: 21vh; */
+  min-height: 120px;
+  max-height: 23vh;
+  line-height: 11vh;
+  width: 100%;
+  text-align: center;
+  /* background-color: lightgrey; */
+  background-image: linear-gradient(lightgrey,lightgrey,#cbdce1);
+  font-family: Snell Roundhand, cursive;
+  font-size: 30px;
+  /* box-shadow: 0px 5px 5px grey; */
+  box-shadow: 0px 5px 5px lightgrey;
+  /* font-size: 20vh; */
+  /* color: silver; */
+  color: #858585;
+  /* -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: grey;
     text-shadow: 4px 5px 2px white; */
 }
 
-.title-outer{
-    width: 100%;
+.title-outer {
+  width: 100%;
 }
 
 .date-outer {
-    height: 30px;
-    /* line-height: 25px;
+  height: 30px;
+  /* line-height: 25px;
     font: 25px; */
-    line-height: 10px;
-    font-size: large;
-    display: grid;
+  line-height: 10px;
+  font-size: large;
+  display: grid;
+  margin-top: -10px;
+
 }
 
-.home-outer{
-    width: 10%;
-    left: 1vh;
-    top: 3.5vh;
-    position: absolute;
+.home-outer {
+  width: 10%;
+  left: 1vh;
+  top: 3.5vh;
+  position: absolute;
 }
 
-.home-button{
-    display: block;
-    width: 50px;
-    height: 50px;
-    /* background-image: url('../../assets/images/homepage.png');
+.home-button {
+  display: block;
+  width: 50px;
+  height: 50px;
+  /* background-image: url('../../assets/images/homepage.png');
     object-fit: cover; */
-    /* background: url('../../assets/images/homepage.png'); */
-    background: url('../../assets/images/ring_heart.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 50%;
+  /* background: url('../../assets/images/homepage.png'); */
+  background: url("../../assets/images/ring_heart.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-radius: 50%;
 }
 
-.home-button .visible{
-    display: inline;
+.home-button .visible {
+  display: inline;
 }
 .invisible {
-    display: none;
-    background-image: none;
+  display: none;
+  background-image: none;
 }
 
 .img-outer {
-    width: 80%;
-    height: 80%;
-    /* padding-left: 10%;
+  width: 80%;
+  height: 80%;
+  /* padding-left: 10%;
     padding-top: 17%; */
 }
 
-@media (max-width:1000px){
-    .header-outer{
-        height: 15vh;
-        line-height: 10vh;
-        padding: 1vh;
-    /* -webkit-text-stroke-color: grey; */
-        font-size: 20px;
-        width: 100%;
-        /* color: red; */
-    }
+.date-outer > span {
+  margin: 2.5px;
+}
 
-    /* .date-outer {
+@media (max-width: 1000px) {
+  .header-outer {
+    height: 15vh;
+    line-height: 10vh;
+    padding: 1vh;
+    /* -webkit-text-stroke-color: grey; */
+    font-size: 20px;
+    width: 100%;
+    /* color: red; */
+  }
+
+  /* .date-outer {
         height: 25px;
         line-height: 12px;
         font: 12px;
         margin: 2px;
     } */
-    .date-outer {
-        height: 25px;
-        line-height: 12px;
-        font: 12px;
-        margin: 2px;
-        /* color: red; */
-    }
+  .date-outer {
+    height: 20px;
+    line-height: 12px;
+    font: 12px;
+    margin: 2px;
+    margin-top: -10px;
+    /* color: red; */
+  }
 
-    .home-button{
-        height: 30px;
-        width: 30px;
-    }
+  .home-button {
+    height: 30px;
+    width: 30px;
+  }
 
-    .home-outer{
-        /* top: 2.5vh; */
-        top: 1px;
-        left: 1px;
-    }
+  .home-outer {
+    /* top: 2.5vh; */
+    top: 1px;
+    left: 1px;
+  }
 
-    /* .img-outer{
+  /* .img-outer{
         padding-top: 15%;
     } */
+
+  .date-outer > span {
+    margin: 2.5px;
+  }
 }
