--- a/src/components/Albums/Album.css
+++ b/src/components/Albums/Album.css
@@ -69,7 +69,8 @@
 
 .album-image-outer {
     min-width: 250px;
-    width: 25%;
+    /* width: 25%; */
+    width: 23.5%;
     height: 500px;
     box-shadow: 0px 0px 5px black;
     border-radius: 10px;
@@ -106,5 +107,9 @@
         width: 100vw;
         display: inline-grid;
         justify-content: center;
+    }
+    .album-image-outer {
+        min-width: 250px;
+        width: 90%;
     }
 }
