--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -37,6 +37,7 @@
 
 .gallery-image-outer {
   min-width: 250px;
+  /* width: 25.5%; */
   width: 25.5%;
   /* height: 200px; */
   /* box-shadow: 0px 0px 5px black; */
@@ -103,9 +104,23 @@
     width: 100vw;
     display: inline-grid;
     justify-content: center;
+    
   }
 
   #landscape {
     width: 90vw;
   }
+  /* #portrait {
+    height: 90vh;
+    max-height: 98vh;
+    width: auto;
+    max-width: 100vw;
+  } */
+
+  /* #portrait  img {
+    max-height: 85vh;
+    width: auto;
+    max-width: 98%;
+    margin: auto;
+  } */
 }
